--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,10 +1,10 @@
 {
    "type": "mysql",
-   "host": "localhost",
+   "host": "34.69.11.105",
    "port": 3306,
    "username": "root",
    "password": "password",
-   "database": "testdb",
+   "database": "test",
    "synchronize": true,
    "logging": false,
    "entities": [
