--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
       "@server": "dist/Server"
    },
    "dependencies": {
+      "@types/mysql": "^2.15.10",
       "command-line-args": "^5.1.1",
       "cookie-parser": "^1.4.5",
       "dotenv": "^8.2.0",
@@ -26,7 +27,7 @@
       "http-status-codes": "^1.4.0",
       "module-alias": "^2.2.2",
       "morgan": "^1.10.0",
-      "mysql": "^2.14.1",
+      "mysql": "^2.18.1",
       "reflect-metadata": "^0.1.10",
       "typeorm": "0.2.24",
       "winston": "^3.2.1"
